# verbose-engine

./: .gitignore  CMakeLists.txt  backend_types.hpp  build_and_run.sh  control_app.cpp  control_app.hpp  image_viewer.cpp  image_viewer.hpp  main.cpp  messages.hpp  sensor_window.cpp  sensor_window.hpp  tcp_client.cpp  tcp_client.hpp
tests/: CMakeLists.txt  main.cpp  test_sensor_window.cpp  test_sensor_window.hpp
